@startuml
title BeatBond - Class Diagram
hide circle
skinparam classAttributeIconSize 0
class User {
  +clerkId: String
  +username: String
  +fullName: String
  +musicPrivacy: everyone|friends|none
  +isOnline: Boolean
}
class Administrator
class Song {
  +title: String
  +artist: String
  +audioUrl: String
  +duration: Number
  +genre: String
  +likedBy: String[]
}
class Album {
  +title: String
  +artist: String
  +releaseYear: Number
}
class Playlist {
  +ownerId: String
  +name: String
  +description: String
  +songs: Mixed[]
  +downloadedAt: Date
}
class LikedArtist {
  +userId: String
  +artistId: String
  +name: String
}
class ListeningActivity {
  +userId: String
  +songId: String
  +durationPlayed: Number
  +completed: Boolean
  +playedAt: Date
}
class FriendRequest {
  +senderId: String
  +receiverId: String
  +status: pending|accepted|rejected
}
class Message {
  +senderId: String
  +receiverId: String
  +content: String
  +status: sent|delivered|read
  +sharedContent: Mixed
}
class Notification {
  +userId: String
  +type: message|friend_request|system
  +read: Boolean
}
class Post {
  +authorId: String
  +content: String
  +media: Media
  +song: Song
}
class Comment {
  +userId: String
  +songId: String
  +content: String
}
class Avatar {
  +userId: String
  +gender: String
  +options: Map
}
class UserLocation {
  +userId: String
  +latitude: Number
  +longitude: Number
  +sharingEnabled: Boolean
  +visibility: everyone|friends
}
class SearchHistory {
  +userId: String
  +query: String
  +resultCount: Number
}

Administrator --|> User
Album "1" o-- "0..*" Song
User "1" -- "0..*" Playlist : owns >
Playlist "0..*" -- "0..*" Song : contains >
User "0..*" -- "0..*" Song : likes >
User "1" -- "0..*" LikedArtist : saves >
User "1" -- "0..*" ListeningActivity
ListeningActivity "*" --> "1" Song
FriendRequest "*" --> "1" User : sender
FriendRequest "*" --> "1" User : receiver
User "0..*" -- "0..*" User : friends
Message "*" --> "1" User : sender
Message "*" --> "1" User : receiver
User "1" -- "0..*" Notification
User "1" -- "0..*" Post
Post "0..1" --> Song : shares
User "1" -- "0..*" Comment
Comment "*" --> Song
User "1" -- "0..1" Avatar
User "1" -- "0..1" UserLocation
User "1" -- "0..*" SearchHistory
@enduml
